--- a/hello.html
+++ b/hello.html
@@ -12,5 +12,8 @@
   <body>
     <!-- TITRE -->
     <div id="top-banner">Bienvenue dans cette formation GIT !</div>
+    <div>
+      <p>je suis KELLY le dev de ISTA</p>
+    </div>
   </body>
 </html>
